# raytracer-tp

./: .gitignore  CMakeLists.txt  LICENCE  NodeDocumentation.md  README.md  setup.sh
Testing/JSON/: demo.scene.json  scene1.json  scene1.scene.json  scene_torus.json  scene_view_obj.scene.json  tex_test.json  tex_test.scene.json  tex_test2.scene.json  tex_test2.scene_copy.json
resources/schemas/: camera.json  light.json  material.json  object.json  scene.json  vector2.json  vector3.json
src/: main.cc
src/camera/: camera.cc  camera.hh  fwd.hh
src/colors/: fwd.hh  rgb.cc  rgb.hh
src/engine/: engine.cc  engine.hh
src/image/: fwd.hh  image.cc  image.hh  linear_image.cc  linear_image.hh  lodepng.cc  rgb_image.cc  rgb_image.hh
src/intersection/: fwd.hh  intersection.cc  intersection.hh
src/json/: fwd.hh  json-import.cc  json-import.hh
src/lights/: ambient_light.cc  ambient_light.hh  fwd.hh  illumination.cc  illumination.hh  light.cc  light.hh  point_light.cc  point_light.hh  sun_light.cc  sun_light.hh
src/materials/: fwd.hh  material.hh  material_properties.cc  material_properties.hh  node_shader_material.cc  node_shader_material.hh  shader_material.cc  shader_material.hh  texture_material.hh  textured_material.cc  textured_material.hh  uniform_material.cc  uniform_material.hh
src/objects/: blob.cc  blob.hh  fwd.hh  mesh.cc  mesh.hh  object.cc  object.hh  plane.cc  plane.hh  sphere.cc  sphere.hh  triangle.cc  triangle.hh
src/points/: fwd.hh  int_point3.cc  int_point3.hh  point3.cc  point3.hh  point4.cc  point4.hh
src/ray/: fwd.hh  ray.cc  ray.hh
src/scene/: fwd.hh  scene.cc  scene.hh
src/utils/: overload.hh  utils.cc  utils.hh  (+1 more)
(+107 files in other folders)
